--- a/src/Styles/_FormInput.scss
+++ b/src/Styles/_FormInput.scss
@@ -16,6 +16,7 @@
 		width: 100%;
 		height: 40px;
 		padding: 0 20px;
+		margin-bottom: 20px;
 		&.hasError {
 			border-color: red;
 			background: rgba(240,4,4, 0.2);
