added two more components

--- a/src/Styles/_FormInput.scss
+++ b/src/Styles/_FormInput.scss
@@ -3,7 +3,7 @@
 .input {
 
 	&__label {
-		font-size: 1.3rem;
+		font-size: 14px;
 		color: $content-gray;
 		font-weight: bold;
 		line-height: 40px;
